wp-content/themes/aaf/style.css
/* ... */
/* older desktop, laptops and tablets. */
@media (min-width: 979px) {
    body {
        background: url('images/bg_large_screens.png') 0 0 repeat;
    }

    .logo {
        width: 220px;
        height: 180px;
        background: url('images/logo_large.png') 0 0 no-repeat;
        margin-top: -18px;
    }

    .utilitynav {
        background: #000;
        height: 45px;
        font-family: 'VAGRoundedLight', Arial, Helvetica, sans-serif;
        font-size: 1.2rem;
        text-transform: uppercase;
        letter-spacing: 1px;
        box-sizing: border-box;
    }

    .utilitynav a {
        display: block;
        width: 100%;
        height: 100%;
        color: #fff;
    }
        .utilitynav div {
            height: 100%;
            margin-left: auto;
            text-align: center;
            padding-top: .7rem;
            box-sizing: border-box;
        }

        .utilitynav a {
            -webkit-transition: all .2s ease-out;
            -moz-transition:    all .2s ease-out;
            -ms-transition:     all .2s ease-out;
            -o-transition:      all .2s ease-out;
            transition:         all .2s ease-out;
        }

        .utilitynav a:hover {
            padding-top: .35rem;
        }

        div.newsletter {
            background: #bcbdbf;
            color: #333;
            padding-top: .5rem;
        }
            .newsletter input[type="text"] {
                background: #333;
                color: #ccc;
                border-radius: 0;
            }
            .newsletter input::-webkit-input-placeholder {
               color: #fff;
               font-size: .7rem;
            }

            .newsletter input:-moz-placeholder { /* Firefox 18- */
               color: #fff;
               font-size: .7rem;  
            }

            .newsletter input::-moz-placeholder {  /* Firefox 19+ */
               color: #fff;
               font-size: .7rem;  
            }

            .newsletter input:-ms-input-placeholder {  
               color: #fff;
               font-size: .7rem;  
            }
        .donate {
            background: #BE2025;
        }
        .news {
            background: #000;
            padding-left: 35px;
        }

        .icon-news {
            color: #BE2025;
        }

    .site {
        padding-top: 1.0rem;
    }

    .site-title {
        font-size: 2.75rem;
        line-height: 3rem;
        text-align: right;
        color: #404041;
    }

    .content-wrap {
        background: #fff;
        padding: 1.5rem 0;
        box-sizing: border-box;
    }

    .site-header .menu-container {
        margin-bottom: 0;
    }

    .visible-desktop .site-navigation {
        background: #000;
    }

    /*Front page only*/
    .front-thumb {
        float: left;
        margin: -4rem 1rem 1rem 0;
    }

    .home.page .site-content > header {
        position: relative;
        margin-left: 18.75rem;
    }
}

@media (min-width: 979px) and (max-width: 1199px) {
    .front-thumb {
        margin: 0 1rem 1rem 0;
    }

    .home.page .site-content > header {
        margin-left: 0;
        width: 95%;
    }
}

/* Portrait tablet to landscape and desktop */
@media (min-width: 768px) 
and (max-width: 979px) 
{ 
    #phonenav #navigation ul {
        width: auto;
    }
    #phonenav #navigation ul li {
        background: none;
        border-bottom: none;
        display: block;
        width: auto;
    }
    .home.page .site-content > header {
        position: relative;
        margin-left: 0;
        width: 95%;
    }
}

/* Landscape phone to portrait tablet */
@media (max-width: 767px) { 

    .site-title {
        font-size: 1.0rem;
        padding-top: .4rem;
    }

    .home.page .site-content > header {
        position: relative;
        margin-left: 0;
        width: 95%;
    }

    .nav-collapse .dropdown-menu {
        background-color: #fff;
    }
    .fc-event-title, .social-search, .map, ul#menu-sub-footer, .breadcrumbs-container {
        display: none;
    }

    .site-footer nav {
margin-top: 0rem;
}

.site-footer nav .footer-menu ul, .site-info, .credits {
    margin: 0 auto;
    text-align: center;
}
.site-footer {
height: 8.5rem;
}

}

/* Landscape phones and down */
@media (max-width: 480px) { 

.site-title {
font-size: 1.0rem;
padding-top: .4rem;
}

.socialbtns-container {
border-bottom: 1px solid #d4d4d4;
padding-bottom: .5rem;
box-shadow: 0 1px 4px rgba(0,0,0,0.065);
}

.site-content {
padding-right: 1rem;
}

.widget > div {
    padding-left: .5rem;
}

.EO_Event_List_Widget {
    padding: 0 .5rem;
}

.social-search, .map, ul#menu-sub-footer, .breadcrumbs-container {
    display: none;
}

.site-footer nav {
margin-top: 0rem;
}

.site-footer nav .footer-menu ul, .site-info, .credits {
    margin: 0 auto;
    text-align: center;
}

.site-footer {
height: 8.5rem;
}

     }

